# parquet-near-storage-compute

./: README.md
datasets/snowset/: query_selectivity_distribution.sql  retrieval_rate.sql
datasets/thesios/: Cargo.toml
microbenchmarks/: Cargo.toml
microbenchmarks/src/disk/: read.rs  write.rs
microbenchmarks/src/http/: client.rs  server.rs
microbenchmarks/src/network/: server.rs
microbenchmarks/src/network_disk/: client.rs  server.rs
utils/: benchmark.sh  server_setup.sh
utils/sdk/: Cargo.toml  connect.sh
utils/sdk/src/: ec2.rs  ip.rs  keypair.rs  main.rs  security_rules.rs  ssm.rs  utils.rs  vpc.rs
v1/: Cargo.toml
v1/src/: main.rs
v2/: Cargo.toml
v2/src/: main.rs
