[package]
name = "v1"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow2 = { version = "0.18.0", features = ["compute_boolean", "compute_cast", "compute_comparison", "compute_concatenate", "compute_filter", "io_parquet", "io_print"] }
chrono = "0.4.39"
futures = "0.3.31"
parquet2 = "0.17.2"
tokio = { version = "1.43.0", features = ["full"] }
