[package]
name = "v2"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow2 = { version = "0.18.0", features = ["io_parquet"] }
bytes = "1.10.0"
futures = "0.3.31"
futures-util = "0.3.31"
once_cell = "1.20.3"
parquet2 = "0.17.2"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat", "io-util"] }
