[package]
name = "ec2"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-ssm = "1.51.0"
aws-smithy-runtime-api = "1.7.2"
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.79.0"
clap = "4.5.20"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
reqwest = "0.12.8"
dirs = "5.0.1"
tokio = { version = "1.40.0", features = ["full"] }
